# quantum-retrocausality-ai

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  analysis_tools.py  main.py  pyproject.toml  quantum_sim.py  requirements.txt
applications/: unitary_fund_FINAL.md
gravity_light/simulator/: index.html  main.js  physics.js
gravity_light/theory/: __init__.py  gravity_factor_derivation.md  key_formulas.py
gravity_light/verification/: constants.py  numerical_experiments.py  ray_tracer.py  test_gravity_factor.py
notebooks/: 01_quantum_eraser_explained.ipynb  02_no_signaling_demonstration.ipynb  03_tsvf_weak_values.ipynb  04_retrocausal_bell_test.ipynb  05_advanced_experiments.ipynb
papers/: gravity_factor_pedagogy.tex  retrocausality_framework.tex  submission_guide.md
src/: __init__.py
src/advanced/: decoherence.py  multipartite.py  phase_transition.py  speedup_analysis.py
src/analysis/: __init__.py  bell_inequality.py  statistics.py
src/core/: __init__.py  density_matrix.py  operators.py  states.py
src/eraser/: __init__.py  coincidence_counter.py  kim_eraser.py  no_signaling_verifier.py
src/retrocausal/: __init__.py  bell_test.py  boundary_value.py  no_signaling_audit.py  zigzag_model.py
src/tsvf/: __init__.py  abl_rule.py  pre_post_selection.py  two_state_vector.py  weak_values.py
src/visualization/: bell_plots.py  eraser_plots.py  weak_value_plots.py
tests/: test_advanced.py  test_core.py  test_eraser.py  test_retrocausal.py  test_tsvf.py
